<resources>
    <string name="app_name">postixdroid</string>
    <string name="err_qr_invalid">The scanned QR code is not valid.</string>
    <string name="err_qr_version">Your app is not compatible with the version of postix on the server. Please check for updates.</string>
    <string name="config_done">Configuration processed. You can now start scanning tickets.</string>
    <string name="err_title">Error</string>
    <string name="dismiss">Dismiss</string>
    <string name="err_unknown">Unknown error</string>
    <string name="title_activity_main">postixdroid</string>
    <string name="cancel">Cancel</string>
    <string name="scan_result_valid">Valid ticket</string>
    <string name="scan_result_used">Ticket already used</string>
    <string name="scan_result_invalid">Invalid ticket</string>
    <string name="scan_result_unpaid">Ticket not paid</string>
    <string name="hint_config">Scan a configuration code to start</string>
    <string name="hint_scan">Scan a ticket code</string>
    <string name="action_clear_config">Reset session config</string>
    <string name="action_request_resupply">Request resupply</string>
    <string name="action_autofocus">Autofocus</string>
    <string name="action_flashlight">Flashlight</string>
    <string name="action_camera">Internal Camera</string>
    <string name="action_search">Manual search</string>
    <string name="action_dhl">DHL</string>
    <string name="permission_required">Camera permission is required</string>
    <string name="search_hint">Search (min. 4 characters)…</string>
    <string name="not_configured">App is not yet configured</string>
    <string name="doublescan">Double-scan ignored</string>
    <string name="confirm_clear">Do you really want to reset the configuration? The device will be useless until you scan a new configuration code.</string>
    <string name="status_redeemed">Redeemed</string>
    <string name="status_unpaid">Unpaid</string>
    <string name="status_valid">Valid</string>
    <string name="redeeming">Redeem ticket…</string>
    <string name="loading">Loading…</string>
    <string name="scan_result_redeemed">Ticket successfully redeemed.</string>
    <string name="about">About the app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="networkinfo">Network info</string>
    <string name="action_play_sound">Play Sound</string>
    <string name="reinstall_datawedge">Reinstall DataWedge</string>
</resources>
